# rpcs

./: .gitignore  .ocamlformat  README.md  dune-project
_build/: .db  .digest-db  log
_build/default/.dune/: configurator  configurator.v2
_build/default/server-client/src/: rpc.ml  server_client.cma  server_client.cmxa  server_client.cmxs  server_client__.ml-gen
_build/default/server-client/src/.merlin-conf/: lib-server_client
_build/default/server-client/src/.server_client.objs/: server_client.impl.all-deps  server_client.impl.d  server_client__Client.impl.d  server_client__Client.intf.d  server_client__Rpc.impl.d  server_client__Rpc.intf.d  server_client__Server.impl.d  server_client__Server.intf.d
_build/default/server-client/src/.server_client.objs/byte/: server_client.cmi  server_client.cmo  server_client.cmt  server_client__.cmi  server_client__.cmo  server_client__.cmt  (+12 more)
protocol/: dune  protocol.mli
rpc/: dune  rpc.ml
rpc/client/: client.ml  client.mli  dune  rpc_client.ml  rpc_client.mli
rpc/src/: dune  rpc_server.ml  server.ml
server-client/: dune  rpc.ml  rpc.mli
server-client-rpc/: README.md
server-client-rpc/client/: client.ml  client.mli  dune
server-client-rpc/protocol/: dune  protocol.ml  protocol.mli
server-client-rpc/src/: dune  server.ml  server.mli  server_lib.mli
server-client/client/: client_lib.ml  dune
server-client/src/: client.mli  dune  protocol.ml  protocol.mli  rpc.ml  rpc.mli  server.ml
swift/: dune  main.c  main.swift  mod.ml
tcp/: README.md  dune  tcp.ml
tcp/client/: dune
tcp/src/: dune  server.ml
(+5 files in other folders)
